# sops-encryption-generator

./: .gitignore  AGENT.md  Cargo.toml  Dockerfile  README.md  action.yml
.github/workflows/: publish.yml
src/: main.rs
