[package]
name = "sops-encryption-generator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sops-encryption-generator"
path = "src/main.rs"

[dependencies]
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
base64 = "0.22"
tokio = { version = "1", features = ["full"] }

